creusot/tests/should_fail/terminates/mutual_recursion.stderr
error: Mutually recursive functions: when calling `m::f1`...
  --> mutual_recursion.rs:7:5
   |
7  |     pub fn f1() {
   |     ^^^^^^^^^^^
   |
note: then `m::f1` calls `f2`...
  --> mutual_recursion.rs:8:9
   |
8  |         super::f2();
   |         ^^^^^^^^^^^
note: then `f2` calls `f3`...
  --> mutual_recursion.rs:14:5
   |
14 |     f3();
   |     ^^^^
note: finally `f3` calls `m::f1`.
  --> mutual_recursion.rs:19:5
   |
19 |     m::f1();
   |     ^^^^^^^

error: aborting due to 1 previous error

